--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,8 +15,8 @@
     --header_bg: #fafafa;
     --content_bg: #fff;
     --archive_font: #000;
-    --archive_title: #46a891;
-    --archive_title_hover: #87CDBD;
+    --archive_title: #66238d;
+    --archive_title_hover: #4f0cca;
     --name_font: #FFAA00;
     --job_font: #003845;
     --nav_font: #8d7edc;
