--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,8 +19,8 @@
     --archive_title_hover: #4f0cca;
     --name_font: #FFAA00;
     --job_font: #003845;
-    --nav_font: #8d7edc;
-    --nav_font_hover: #D4CEF2;
+    --nav_font: #064a72;
+    --nav_font_hover: #0a57af;
     --shadow_color: rgba(160, 160, 160, 0.05);
     --post_title: #003845;
     --post_date: #003845;
