--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,7 @@
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,400i" rel="stylesheet">
+  <script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 </head>
